--- a/project-3/indexl.html
+++ b/project-3/indexl.html
@@ -11,11 +11,11 @@
 </head>
 
 <body>
-    <h1>Homepage</h1>
-    <img "plantt" src="asset/plant-2.gif" alt="plannt"> 
-       </img>
-    <p>This is a paragraph aye</p>
-    <img src="asset/computer-plant.jpg" alt="">
+    <h1>OUR PLANET IS GONE; DON'T BLAME YOURSELF</h1>
+<!--    <img "plantt" src="asset/smog1.jpg" alt=""> -->
+<!--       </img>-->
+    <p>BUT SOMEHOW WE HAVE TO TAKE RESPONSIBILITY. BREATHE IN THE SMOG...GO AHEAD</p>
+    <a href "page-2.html"><img src="asset/smog1.jpg" width="450" height="300" alt=""></a>
 
 </body>
 
