--- a/project-3/page-2.html
+++ b/project-3/page-2.html
@@ -11,7 +11,9 @@
 </head>
 
 <body>
-    <h1>Page 2</h1>
+    <h1>DO YOU KNOW WHO CAUSED THIS SMOG</h1>
+    <p>THAT FILLS OUR LUNGS WITH TAR?</p>
+    <a href "page-3.html"><img src="asset/smog2.jpg" width="500" height="350" alt=""></a>
    
 
 </body>
