--- a/project-3/indexl.html
+++ b/project-3/indexl.html
@@ -11,11 +11,11 @@
 </head>
 
 <body>
-    <h1>OUR PLANET IS GONE; DON'T BLAME YOURSELF</h1>
+    <h1>OUR PLANET IS GONE; DID WE MURDER HER?</h1>
 <!--    <img "plantt" src="asset/smog1.jpg" alt=""> -->
 <!--       </img>-->
-    <p>BUT SOMEHOW WE HAVE TO TAKE RESPONSIBILITY. BREATHE IN THE SMOG...GO AHEAD</p>
-    <a href "page-2.html"><img src="asset/smog1.jpg" width="450" height="300" alt=""></a>
+    <p>BREATHE IN THE SMOG. FORCE THE EXHALE. THEY'VE MADE IT OUR FAULT.</p>
+    <a href "https://beyondmetallic.github.io/iml300-demo/project-3/page-2.html"><img src="asset/smog1.jpg" width="450" height="300" alt=""></a>
 
 </body>
 
