--- a/project-3/page-2.html
+++ b/project-3/page-2.html
@@ -12,7 +12,7 @@
 
 <body>
     <h1>MOST OF US DON'T KNOW WHO CAUSED THIS SMOG</h1>
-    <p>THAT FILLS OUR LUNGS WITH TAR AND INDIGNATION</p>
+    <p>THAT FILLS OUR LUNGS WITH TAR AND INDIGNATION.</p>
     <a href "https://beyondmetallic.github.io/iml300-demo/project-3/page-3.html"><img src="asset/smog2.jpg" width="500" height="350" alt=""></a>
    
 
