--- a/project-3/indexl.html
+++ b/project-3/indexl.html
@@ -15,7 +15,7 @@
 <!--    <img "plantt" src="asset/smog1.jpg" alt=""> -->
 <!--       </img>-->
     <p>BREATHE IN THE SMOG. FORCE THE EXHALE. THEY'VE MADE IT OUR FAULT.</p>
-    <a href "https://beyondmetallic.github.io/iml300-demo/project-3/page-2.html"><img src="asset/smog1.jpg" width="450" height="300" alt=""></a>
+    <a href = "page-2.html"><img src="asset/smog1.jpg" width="450" height="300" alt=""></a>
 
 </body>
 
