--- a/project-3/indexl.html
+++ b/project-3/indexl.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+<link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=Michroma&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <title>Document</title>    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>
@@ -10,12 +13,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-    <h1>OUR PLANET IS GONE; DID WE MURDER HER?</h1>
-<!--    <img "plantt" src="asset/smog1.jpg" alt=""> -->
-<!--       </img>-->
-    <p>BREATHE IN THE SMOG. FORCE THE EXHALE. THEY'VE MADE IT OUR FAULT.</p>
-    <a href = "page-2.html"><img src="asset/smog1.jpg" width="450" height="300" alt=""></a>
+<body style="font-color:white;">
+      <body class="page-1">
+    <h1><a href="page-2.html">HEARTLESSNESS. WAR CRIMINALS. DOMESTICITY. FOREIGNERS.<BR>TRAVELERS. COLONIZERS. VIOLENCE. RAW EMOTION. ERADICATION. ABUSE. HIERARCHY. DESTRUCTION. LIMBS.<BR>EVIL TONGUES. STRONG MEN. FEARFUL CHILDREN. <BR> MACHINES. OPERATIONS. HAPTICS. DESIRELESSNESS. SHATTERED AIR.<BR> HOPELESSNESS. DISGUST. FUNERALS. ACHING LUNGS. PASSION'S BRUISE. LAND. ATMOSPHERIC DEATH. BROKEN FOLKLORE. DETAILS. PRECISION. TECHNOLOGY. ENGINES. SYSTEMS. WHIMPERING HOMES. HEAVING. DRONE BOMBINGS. <BR>
+        CAMOFLAUGE. CAMPS. EXTRACTION. DISSOLUTION. DEPLETING. EMISSION. FRACTURED SURFACE. TORMENTED TREES. THEM.</BR></a>
+        </h1>
+   
 
 </body>
 
