--- a/project-3/page-2.html
+++ b/project-3/page-2.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+<link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=Goldman&family=Share+Tech+Mono&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <title>Document</title>    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>
@@ -11,9 +14,16 @@
 </head>
 
 <body>
-    <h1>MOST OF US DON'T KNOW WHO CAUSED THIS SMOG</h1>
-    <p>THAT FILLS OUR LUNGS WITH TAR AND INDIGNATION.</p>
-    <a href = "page-3.html"><img src="asset/smog2.jpg" width="500" height="350" alt=""></a>
+      <body class="page-2">
+          <div class="container">
+  <div class="row">
+    <div class="col-md-12 text-center">
+    <h1 class="animate character"><u>WARNING:<hr></u> the following website contains imagery and descriptions <br> exposing the brutalities of warfare and destruction <br> of the environment.<br>
+        <a href="page-3.html">PROCEED</a>
+        </h1>
+         </div>
+  </div>
+</div>
    
 
 </body>
