--- a/project-3/page-3.html
+++ b/project-3/page-3.html
@@ -2,8 +2,11 @@
 <html lang="en">
 
 <head>
+<link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=Goldman&family=Share+Tech+Mono&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
-    <title>Document</title>    
+    <title>choose wisely</title>    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="script.js"></script>
@@ -11,11 +14,18 @@
 </head>
 
 <body>
-    <h1>HEARTLESSNESS. WAR CRIMINALS. DOMESTICITY. FOREIGNERS.<BR>TRAVELERS. COLONIZERS. VIOLENCE. RAW EMOTION. ERADICATION. ABUSE. HIERARCHY. DESTRUCTION. LIMBS.<BR>EVIL TONGUES. STRONG MEN. FEARFUL CHILDREN. MACHINES. OPERATIONS. HAPTICS. DESIRELESSNESS<BR> HOPELESSNESS. DISGUST. FUNERALS. ACHING LUNGS. PASSION'S BRUISE. LAND. ATMOSPHERIC DEATH.<BR> DETAILS. PRECISION. TECHNOLOGY. ENGINES. SYSTEMS. WHIMPERING HOMES. HEAVING. <BR>
-    CAMOFLAUGE. CAMPS. EXTRACTION. DISSOLUTION. DEPLETING. EMISSION. FRACTURED SURFACE. THEM. 
-        </h1>
-   
-
+    <body class="page-3">
+    <div class="one" >
+    <h1>the environment welcomes you to explore its different landscapes</h1>
+   <p>   choose a scene from below and immerse yourself within it </p>
+        
+</div>
+ <div class="parent">
+     <a href="page-5.html"><img src="asset/forrest.jpg" alt="Avatar" class="forrest" /></a>
+     <a href="page-6.html"><img class="glacier" src="asset/glacier.JPG"/></a>
+     <a href="page-7.html"><img class="desert" src="asset/desert.jpg"/></a>
+     
+        </div>
 </body>
 
 </html>
