--- a/project-3/page-2.html
+++ b/project-3/page-2.html
@@ -20,10 +20,13 @@
     <div class="col-md-12 text-center">
     <h1 class="animate character"><u>WARNING:<hr></u> the following website contains imagery and descriptions <br> exposing the brutalities of warfare and destruction <br> of the environment.<br>
         <a href="page-3.html">PROCEED</a>
+        <br>
         </h1>
+        <a href="page-8.html"><h2>?</h2></a>
          </div>
   </div>
 </div>
+          
    
 
 </body>
