--- a/project-3/page-3.html
+++ b/project-3/page-3.html
@@ -26,6 +26,10 @@
      <a href="page-7.html"><img class="desert" src="asset/desert.jpg"/></a>
      
         </div>
+        
+        <div class="twelve" >
+            <a href="page-9.html"><h2>click here when done</h2></a>
+        </div>
 </body>
 
 </html>
