--- a/project-3/page-6.html
+++ b/project-3/page-6.html
@@ -25,6 +25,7 @@ p<html lang="en">
 </div>
   <div class="parent">
     <img class="whale" src="asset/whale.jpg"/>
+      <img class="blood" src="asset/bloodfalls.jpg"/>
           </div>
           
           <div class="three" >
