--- a/project-3/page-7.html
+++ b/project-3/page-7.html
@@ -29,7 +29,7 @@ p<html lang="en">
           <div class="seven" >
                    <h2>under the guise of fighting for one's country,<br>
              many innocent people suffer <br>
-              along with the land they live on. where will they eat brekfast tomorrow?<br>where will they pray without land? without a home?</h2>
+              along with the land they live on. where will they eat breakfast tomorrow?<br>where will they pray without land? without a home?</h2>
                </div>
           
           <div class="eight" >
