--- a/project-3/page-8.html
+++ b/project-3/page-8.html
@@ -76,7 +76,7 @@ a{
         <p>
             this site is a project by john miranda to expose and explore briefly but powerfully the heaviness and brutalities of war's contribution to environmental destruction. militaries have long used their power and hierachical advantage to intimidate, demean, and invade. however, as the climate begins to change laregely as a result of their mess, we must throw the bombs back. click the words on the first page you were just on, and be taken through some decision making and excruciating realities.
         </p>
-        <a href="indexl.html">go back</a>
+        <a href="page-2.html">go back</a>
     </div>
     <!--Script-->
     <script type="text/javascript">
