--- a/project-3/page-3.html
+++ b/project-3/page-3.html
@@ -6,7 +6,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 <link href="https://fonts.googleapis.com/css2?family=Goldman&family=Share+Tech+Mono&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
-    <title>choose wisely</title>    
+    <title>within</title>    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="script.js"></script>
