--- a/project-3/page-8.html
+++ b/project-3/page-8.html
@@ -5,7 +5,7 @@
   <!--====== Design by foolishdeveloper.com =====-->
   
   
-    <title>about this site</title>
+    <title>way of</title>
     <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
